[package]
name = "alma"
version = "0.10.0"
authors = ["Roey Darwish Dror"]
edition = "2018"

[dependencies]
which = "4"
log = "0.4"
structopt = "0.3"
tempfile = "3"
serde = { version = "1", features = ["derive"] }
toml = "0.5"
byte-unit = "4.0"
nix = "0.20.0"
env_logger = "0.8"
pretty_env_logger = "0.4"
dialoguer = "0.8.0"
console = "0.14.1"
anyhow = "1"
